Fix list spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ ul {
 }
 
 li {
-    padding: 6px 0 6px 0;
+    padding: 4px 0 4px 0;
 }
 
 a.name {
@@ -113,4 +113,5 @@ table.topalign td {
 
 .maruku_toc li {
     list-style-type: none;
+    padding: 3px 0 3px 0;
 }
